--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,6 +23,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - run: |
+        git config user.name "ahermosilladev"
+        git config user.email "$USERNAME"
+        git remote set-url origin "https://$TOKEN@github.com/ahermosilladev/react-example"
     - run: rm -r package-lock.json
     - run: npm i
     - run: npm run build
