--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -25,12 +25,13 @@ jobs:
     - run: npm i
     - run: npm run build
 
-    - name: Upload Files to Server
-      uses: appleboy/scp-action@v0.1.7
+    - name: ssh scp ssh pipelines
+      uses: cross-the-world/ssh-scp-ssh-pipelines@latest
       with:
         host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SSH_USER }}
+        user: ${{ secrets.SSH_USER }}
         key: ${{ secrets.SSH_KEY }}
         port: 22
-        source: "./dist/*"
-        target: "/var/www/html/"
+        connect_timeout: 10s
+        scp: |
+          './dist/*' => "/var/www/html/"
