--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -34,4 +34,4 @@ jobs:
         port: 22
         connect_timeout: 10s
         scp: |
-          './dist/*' => "/var/www/html/"
+          'dist/*' => "/var/www/html/react-example"
